--- a/projetoint/FinalWeb/src/main/webapp/style.css
+++ b/projetoint/FinalWeb/src/main/webapp/style.css
@@ -1,315 +1,325 @@
 @charset "ISO-8859-1";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-} 
+@import
+	url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap')
+	;
 
-nav{
-  position: absolute;
-  top: 2px;
-  height: 80px;
-  width: 100%;
-  background: #1b1b1b;
-  align-items: center;
-  padding: 0 50px 0 100px;
-  flex-wrap: wrap;
-}
-nav .logo{
-  color: #4D4DFF;
-  font-size: 35px;
-  font-weight: 600;
-  padding-top: 10px;
-  
-}
-nav ul{
-  display: flex;
-  justify-content:space0bet;
-  flex-wrap: wrap;
-  list-style: none;
-}
-nav ul li{
-  margin: 0 5px;
-}
-nav ul li a{
-  color: #f2f2f2;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: 500;
-  padding: 8px 15px;
-  border-radius: 5px;
-  letter-spacing: 1px;
-  transition: all 0.3s ease;
-}
-nav ul li a.active,
-nav ul li a:hover{
-  color: #fff;
-  background: #4D4DFF;
-}
-nav .menu-btn i{
-  color: #fff;
-  font-size: 22px;
-  cursor: pointer;
-  display: none;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
 }
 
-@media (max-width: 1000px){
-  nav{
-    padding: 0 40px 0 50px;
-  }
-}
-@media (max-width: 920px) {
-  nav .menu-btn i{
-    display: block;
-  }
-  #click:checked ~ .menu-btn i:before{
-    content: "\f00d";
-  }
-  nav ul{
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    background: #111;
-    height: 100vh;
-    width: 100%;
-    text-align: center;
-    display: block;
-    transition: all 0.3s ease;
-  }
-  #click:checked ~ ul{
-    left: 0;
-  }
-  nav ul li{
-    width: 100%;
-    margin: 40px 0;
-  }
-  nav ul li a{
-    width: 100%;
-    margin-left: -100%;
-    display: block;
-    font-size: 20px;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  #click:checked ~ ul li a{
-    margin-left: 0px;
-  }
-  nav ul li a.active,
-  nav ul li a:hover{
-    background: none;
-    color: cyan;
-  }
-}
-.content{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  z-index: -1;
-  width: 100%;
-  padding: 0 30px;
-  color: #1b1b1b;
-}
-.content div{
-  font-size: 40px;
-  font-weight: 700;
+nav {
+	position: absolute;
+	top: 2px;
+	height: 80px;
+	width: 100%;
+	background: #1b1b1b;
+	align-items: center;
+	padding: 0 50px 0 100px;
+	flex-wrap: wrap;
 }
 
-
-body{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #201b2c;
+nav .logo {
+	color: #4D4DFF;
+	font-size: 35px;
+	font-weight: 600;
+	padding-top: 10px;
 }
 
-.container{
-    position: relative;
-    max-width: 430px;
-    width: 100%;
-    background: #fff;
-    border-radius: 10px;
-    overflow: hidden;
-    margin: 0 20px;
-    box-shadow: 0 0 15px 0 #4D4DFF;
+nav ul {
+	display: flex;
+	justify-content: space0bet;
+	flex-wrap: wrap;
+	list-style: none;
 }
 
-.container .forms{
-    display: flex;
-    align-items: center;
-    height: 440px;
-    width: 200%;
-    transition: height 0.2s ease;
+nav ul li {
+	margin: 0 5px;
 }
 
-
-.container .form{
-    width: 50%;
-    padding: 30px;
-    background-color: #201b2c;
-    transition: margin-left 0.18s ease;
+nav ul li a {
+	color: #f2f2f2;
+	text-decoration: none;
+	font-size: 18px;
+	font-weight: 500;
+	padding: 8px 15px;
+	border-radius: 5px;
+	letter-spacing: 1px;
+	transition: all 0.3s ease;
 }
 
-.container.active .login{
-    margin-left: -50%;
-    opacity: 0;
-    transition: margin-left 0.18s ease, opacity 0.15s ease;
+nav ul li a.active, nav ul li a:hover {
+	color: #fff;
+	background: #4D4DFF;
 }
 
-.container .signup{
-    opacity: 0;
-    transition: opacity 0.09s ease;
-}
-.container.active .signup{
-    opacity: 1;
-    transition: opacity 0.2s ease;
+nav .menu-btn i {
+	color: #fff;
+	font-size: 22px;
+	cursor: pointer;
+	display: none;
 }
 
-.container.active .forms{
-    height: 600px;
-}
-.container .form .title{
-    position: relative;
-    font-size: 27px;
-    font-weight: 600;
-    color: #fff;
+@media ( max-width : 1000px) {
+	nav {
+		padding: 0 40px 0 50px;
+	}
 }
 
-.form .title::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 30px;
-    background-color: #4D4DFF;
-    border-radius: 25px;
+@media ( max-width : 920px) {
+	nav .menu-btn i {
+		display: block;
+	}
+	#click:checked ~ .menu-btn i:before {
+		content: "\f00d";
+	}
+	nav ul {
+		position: fixed;
+		top: 80px;
+		left: -100%;
+		background: #111;
+		height: 100vh;
+		width: 100%;
+		text-align: center;
+		display: block;
+		transition: all 0.3s ease;
+	}
+	#click:checked ~ ul {
+		left: 0;
+	}
+	nav ul li {
+		width: 100%;
+		margin: 40px 0;
+	}
+	nav ul li a {
+		width: 100%;
+		margin-left: -100%;
+		display: block;
+		font-size: 20px;
+		transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	}
+	#click:checked ~ ul li a {
+		margin-left: 0px;
+	}
+	nav ul li a.active, nav ul li a:hover {
+		background: none;
+		color: cyan;
+	}
 }
 
-.form .input-field{
-    position: relative;
-    height: 50px;
-    width: 100%;
-    margin-top: 30px;
-    
+.content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-align: center;
+	z-index: -1;
+	width: 100%;
+	padding: 0 30px;
+	color: #1b1b1b;
 }
 
-.input-field input{
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    padding: 0 35px;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    border-radius: 20px;
-    border-bottom: 2px solid #4D4DFF;
-    border-top: 2px solid transparent;
-    transition: all 0.2s ease;
-    background-color: #514869;
+.content div {
+	font-size: 40px;
+	font-weight: 700;
 }
 
-.input-field input:is(:focus, :valid){
-    border-bottom-color: #4D4DFF;
+body {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #201b2c;
 }
 
-.input-field i{
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-left: 5px;
-    color: #fff;
-    font-size: 19px;
-    transition: all 0.2s ease;
+.container {
+	position: relative;
+	max-width: 430px;
+	width: 100%;
+	background: #fff;
+	border-radius: 10px;
+	overflow: hidden;
+	margin: 0 20px;
+	box-shadow: 0 0 15px 0 #4D4DFF;
 }
 
-.input-field input:is(:focus, :valid) ~ i{
-    color: #4D4DFF;
+.container .forms {
+	display: flex;
+	align-items: center;
+	height: 440px;
+	width: 200%;
+	transition: height 0.2s ease;
 }
 
-.input-field i.icon{
-    left: 0;
-}
-.input-field i.showHidePw{
-    right: 0;
-    cursor: pointer;
-    padding: 10px;
+.container .form {
+	width: 50%;
+	padding: 30px;
+	background-color: #201b2c;
+	transition: margin-left 0.18s ease;
 }
 
-.form .checkbox-text{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
+.container.active .login {
+	margin-left: -50%;
+	opacity: 0;
+	transition: margin-left 0.18s ease, opacity 0.15s ease;
 }
 
-.checkbox-text .checkbox-content{
-    display: flex;
-    align-items: center;
+.container .signup {
+	opacity: 0;
+	transition: opacity 0.09s ease;
 }
 
-.checkbox-content input{
-    margin-right: 10px;
-    accent-color: #4D4DFF;
+.container.active .signup {
+	opacity: 1;
+	transition: opacity 0.2s ease;
 }
 
-.form .text{
-    color: #fff;
-    font-size: 14px;
+.container.active .forms {
+	height: 600px;
 }
 
-.form a.text{
-    color: #4D4DFF;
-    text-decoration: none;
-}
-.form a:hover{
-    text-decoration: underline;
-}
-
-.form .button{
-    margin-top: 35px;
+.container .form .title {
+	position: relative;
+	font-size: 27px;
+	font-weight: 600;
+	color: #fff;
 }
 
-.form .button input{
-    border: none;
-    color: #fff;
-    font-size: 17px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    border-radius: 6px;
-    background-color: #4D4DFF;
-    cursor: pointer;
-    transition: all 0.3s ease;
+.form .title::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	height: 3px;
+	width: 30px;
+	background-color: #4D4DFF;
+	border-radius: 25px;
 }
 
-.button input:hover{
-    background-color: #4D4DFF;
+.form .input-field {
+	position: relative;
+	height: 50px;
+	width: 100%;
+	margin-top: 30px;
 }
 
-.form .login-signup{
-    margin-top: 30px;
-    text-align: center;
+.input-field input {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	padding: 0 35px;
+	border: none;
+	outline: none;
+	font-size: 16px;
+	border-radius: 20px;
+	border-bottom: 2px solid #4D4DFF;
+	border-top: 2px solid transparent;
+	transition: all 0.2s ease;
+	background-color: #514869;
 }
 
-.password::placeholder{
-    color:#fff;
+.input-field input:is(:focus, :valid) {
+	border-bottom-color: #4D4DFF;
+}
+
+.input-field i {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	margin-left: 5px;
+	color: #fff;
+	font-size: 19px;
+	transition: all 0.2s ease;
+}
+
+.input-field input:is(:focus, :valid) ~ i {
+	color: #4D4DFF;
+}
+
+.input-field i.icon {
+	left: 0;
+}
+
+.input-field i.showHidePw {
+	right: 0;
+	cursor: pointer;
+	padding: 10px;
+}
+
+.form .checkbox-text {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 20px;
+}
+
+.checkbox-text .checkbox-content {
+	display: flex;
+	align-items: center;
+}
+
+.checkbox-content input {
+	margin-right: 10px;
+	accent-color: #4D4DFF;
+}
+
+.form .text {
+	color: #fff;
+	font-size: 14px;
+}
+
+.form a.text {
+	color: #4D4DFF;
+	text-decoration: none;
+}
+
+.form a:hover {
+	text-decoration: underline;
+}
+
+.form .button {
+	margin-top: 35px;
+}
+
+.form .button input {
+	border: none;
+	color: #fff;
+	font-size: 17px;
+	font-weight: 500;
+	letter-spacing: 1px;
+	border-radius: 6px;
+	background-color: #4D4DFF;
+	cursor: pointer;
+	transition: all 0.3s ease;
+}
+
+.button input:hover {
+	background-color: #4D4DFF;
+}
+
+.form .login-signup {
+	margin-top: 30px;
+	text-align: center;
+}
+
+.password::placeholder {
+	color: #fff;
 }
 
 .conteudo {
-	color: #4D4DFF; 
+	color: #4D4DFF;
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-    background-color: #1b1b1b;
-    color: #FFF;
-    width: 100%;
-    height: 100px;    
-    text-align: center;
-    line-height: 100px;
+	position: absolute;
+	bottom: 0;
+	background-color: #1b1b1b;
+	color: #FFF;
+	width: 100%;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
 }
